kubernete/2-networkpolicy.yml
---
# Politique réseau pour l'espace app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: app
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 5173
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 443
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: app
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
